--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -237,7 +237,7 @@
 				    	<h3>Create New Post</h3>
 				    	<br/>
 				      	<label for="title">Title:</label>
-				      	<input type="text" class="form-control" id="title" placeholder="Title" name="title">
+				      	<input type="text" class="form-control" id="title" placeholder="Title" maxlength="200" name="title">
 				      	<label for="content">Content:</label>
 				     	  <input type="text" class="form-control contentBox" id="content" placeholder="Content" maxlength="2000" name="content">
 				      <span id="remainingC"></span>
