Change help button position, improve on data, set better character limits

--- a/views/canyonvista.handlebars
+++ b/views/canyonvista.handlebars
@@ -86,7 +86,7 @@
 					    <h4><strong>Add New Menu</strong></h4>
 					    <div class="form-group form-inline">
 					    <label for="name">Name:</label>
-					    <input id="name" maxlength="200" name="name">
+					    <input id="name" maxlength="60" name="name">
 					    </div>
 					    <div class="form-group form-inline">
 					    <label for="name">Type:</label>
@@ -118,6 +118,59 @@
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
 	<script src="js/nutriton.js"></script>
+
+	<script>
+
+	var data = {
+	"canyonvistaposts": [
+		{
+			"name": "Carved Roast Turkey",
+			"type": "Gluten-free",
+			"upvotes": "2",
+			"downvotes": "0"
+		},
+		{
+			"name": "Steamed Vegetables",
+			"type": "Vegan",
+			"upvotes": "3",
+			"downvotes": "1"
+		},
+		{
+			"name": "Chipotle Burger",
+			"type": "Vegetarian",
+			"upvotes": "5",
+			"downvotes": "1"
+		},
+		{
+			"name": "Power Protein Bowl",
+			"type": "Gluten-free",
+			"upvotes": "3",
+			"downvotes": "2"
+		},
+		{
+			"name": "Hummus Platter",
+			"type": "Vegetarian",
+			"upvotes": "4",
+			"downvotes": "2"
+		},
+		{
+			"name": "Gardein Burger",
+			"type": "Vegetarian",
+			"upvotes": "3",
+			"downvotes": "0"
+		}
+	]
+}
+
+var returnedData = $.grep(data.canyonvistaposts, function (element, index) {
+    return element.type == "Vegetarian";
+});
+
+
+alert(returnedData[0].type + "  ");
+
+
+	</script>
 
   </body>
 </html>
