--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -167,16 +167,16 @@
 				    	<br/>
 				    	Name
 				      	<!-- <label for="name">Name</label> -->
-				      	<input type="text" class="form-control" id="title" name="name">
+				      	<input type="text" class="form-control" id="title" maxlength="60" name="name">
 				      	Email
 				      	<!-- <label for="email">Email</label> -->
-				     	<input type="text" class="form-control" id="content" name="email">
+				     	<input type="text" class="form-control" id="content" maxlength="60" name="email">
 				     	Password
 				     	<!-- <label for="password">Password</label> -->
-				     	<input type="password" class="form-control" id="content" name="password">
+				     	<input type="password" class="form-control" id="content" maxlength="60" name="password">
 				     	Confirm Password
 				     	<!-- <label for="passwordconfirm">Confirm Password</label> -->
-				     	<input type="password" class="form-control" id="content" name="passwordconfirm">
+				     	<input type="password" class="form-control" id="content" maxlength="60" name="passwordconfirm">
 				    </div>
 				    <input type="submit" id="submitBtn" class="btn btn-default" value="Register"></input>
 				</form>
