--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -125,16 +125,15 @@
 			<div class="navbar-header"> 
 				<!-- <a href="index" class="navbar-brand">nuTriton </a>  -->
 				<button type="button" class="navbar-toggle login-collapse" data-toggle="collapse" data-target=".navbar-collapse">
-					Login
+					Login Here
 				</button>
 			</div>
-
 			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
+				<div class="nav navbar-nav navbar-right">
 					<li> <a href="foodfinder" class="login_click"> Log In </a></li>
-				</ul>
+				</div>
 				<form class="navbar-form navbar-right" role="search">
-        			<div class="form-group login">
+        			<div class="form-group form-inline login">
         			    <input type="text" class="form-control" placeholder="Username">
           				<input type="password" class="form-control" placeholder="Password">
         			</div>
